[gd_scene load_steps=2 format=3 uid="uid://cd3c7atlh7obx"]

[ext_resource type="Script" path="res://scenes/hud/hud.gd" id="1_u5dq6"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_u5dq6")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 2.0
offset_top = 4.0
offset_right = 42.0
offset_bottom = 44.0
text = "hp"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 1.0
offset_top = 44.0
offset_right = 41.0
offset_bottom = 84.0
text = "keys"

[node name="kysLable" type="RichTextLabel" parent="."]
offset_left = 45.0
offset_top = 45.0
offset_right = 85.0
offset_bottom = 85.0
text = "0"

[node name="hpLable" type="RichTextLabel" parent="."]
offset_left = 36.0
offset_top = 5.0
offset_right = 156.0
offset_bottom = 28.0
text = "0"

[node name="messageLable" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -257.0
offset_top = -41.0
offset_right = 256.0
offset_bottom = -1.0

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
